--- a/sentCsStyle.css
+++ b/sentCsStyle.css
@@ -6,3 +6,11 @@
               font-family: Arial, Helvetica, sans-serif;
               font-weight: normal; /* or bold */
             }
+#sent_3 {
+              background-color:white;  /* or rgb(189, 17, 152) */
+              color: black;
+              font-size: 11px;
+              font-style: normal; /* or  italic  */
+              font-family: Arial, Helvetica, sans-serif;
+              font-weight: normal; /* or bold */
+            }
