--- a/src/app/side-panel-document-list/side-panel-document-list.component.html
+++ b/src/app/side-panel-document-list/side-panel-document-list.component.html
@@ -6,9 +6,11 @@
 >
   <mat-list-option
     *ngFor="let document of documentList"
+    [disableRipple]="true"
     [value]="document"
     class="document-list-item"
     role="listitem"
+    [title]="document.title"
   >
     <span>{{ document.title }}</span>
     <button
