--- a/src/app/side-panel/side-panel.component.html
+++ b/src/app/side-panel/side-panel.component.html
@@ -4,6 +4,11 @@
   (removeDocumentFromListEvent)="removeDocumentFromList($event)"
   class="side-panel-document-list"
 ></app-side-panel-document-list>
-<button mat-flat-button class="add-document-button" color="warn">
+<button
+  mat-flat-button
+  class="add-document-button"
+  color="warn"
+  (click)="openAddTextsDialog()"
+>
   Aggiungi testo
 </button>
