--- a/src/app/wrapper/wrapper.component.html
+++ b/src/app/wrapper/wrapper.component.html
@@ -1,2 +1,5 @@
 <app-header></app-header>
-<app-panel-wrapper></app-panel-wrapper>
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="Testi"><app-panel-wrapper></app-panel-wrapper></mat-tab>
+  <mat-tab label="Filtri"><app-filter-wrapper></app-filter-wrapper></mat-tab>
+</mat-tab-group>
