nuove aggiunte parti filter

--- a/src/app/filter-wrapper/filter-wrapper.component.html
+++ b/src/app/filter-wrapper/filter-wrapper.component.html
@@ -1,1 +1,4 @@
-<p>filter-wrapper works!</p>
+<div class="filter-panel-wrapper">
+  <app-filter-side-panel class="filter-side-panel"> </app-filter-side-panel>
+  <app-filter-main-panel class="filter-main-panel"> </app-filter-main-panel>
+</div>
