initial implementation of getfilter request

--- a/src/app/filter-main-panel/filter-main-panel.component.html
+++ b/src/app/filter-main-panel/filter-main-panel.component.html
@@ -1,1 +1,10 @@
-
+<div class="boundary">
+  <div
+    *ngFor="let card of filterCards"
+    cdkDragBoundary=".boundary"
+    class="box"
+    cdkDrag
+  >
+    {{ card.filterRequest.upos }}
+  </div>
+</div>
