--- a/src/app/filter-wrapper/filter-wrapper.component.html
+++ b/src/app/filter-wrapper/filter-wrapper.component.html
@@ -1,4 +1,9 @@
 <div class="filter-panel-wrapper">
-  <app-filter-side-panel class="filter-side-panel"> </app-filter-side-panel>
-  <app-filter-main-panel class="filter-main-panel"> </app-filter-main-panel>
+  <app-filter-side-panel
+    class="filter-side-panel"
+    (addFilterCardEvent)="addFilterCardToMainPanel()"
+  >
+  </app-filter-side-panel>
+  <app-filter-main-panel class="filter-main-panel" [filterCards]="filterCards">
+  </app-filter-main-panel>
 </div>
