--- a/src/app/filter-side-panel/filter-side-panel.component.html
+++ b/src/app/filter-side-panel/filter-side-panel.component.html
@@ -1,1 +1,12 @@
-
+<mat-list>
+  <mat-list-item role="listitem">
+    <button
+      mat-flat-button
+      class="pos-button"
+      color="warn"
+      (click)="addFilterCard()"
+    >
+      ADJ
+    </button>
+  </mat-list-item>
+</mat-list>
