--- a/src/app/filter-wrapper/filter-wrapper.component.html
+++ b/src/app/filter-wrapper/filter-wrapper.component.html
@@ -1,9 +1,21 @@
 <div class="filter-panel-wrapper">
   <app-filter-side-panel
     class="filter-side-panel"
-    (addFilterCardEvent)="addFilterCardToMainPanel()"
+    (addFilterCardEvent)="addFilterCardToMainPanel($event)"
   >
   </app-filter-side-panel>
-  <app-filter-main-panel class="filter-main-panel" [filterCards]="filterCards">
+  <app-filter-main-panel
+    (applyLensEvent)="applyLens($event)"
+    (applyFilterEvent)="applyFilter($event)"
+    (applySentenceEvent)="applySentence($event)"
+    (applySequenceEvent)="applySequence($event)"
+    (removeFilterCardEvent)="removeFilterCard($event)"
+    (removeSentenceCardEvent)="removeSentenceCard($event)"
+    class="filter-main-panel"
+    [filterCards]="filterCards"
+    [sentenceCards]="sentenceCards"
+    [sequenceCards]="sequenceCards"
+    [selectedTabIndex]="selectedTabIndex"
+  >
   </app-filter-main-panel>
 </div>
