--- a/src/app/wrapper/wrapper.component.html
+++ b/src/app/wrapper/wrapper.component.html
@@ -1,5 +1,19 @@
-<app-header></app-header>
-<mat-tab-group mat-align-tabs="center">
-  <mat-tab label="Testi"><app-panel-wrapper></app-panel-wrapper></mat-tab>
-  <mat-tab label="Filtri"><app-filter-wrapper></app-filter-wrapper></mat-tab>
+<mat-tab-group
+  mat-align-tabs="center"
+  (selectedIndexChange)="updateSelectedTabIndex($event)"
+  [animationDuration]="'0ms'"
+>
+  <mat-tab label="Testi">
+    <app-panel-wrapper
+      (changedSelectedDocId)="updateSelectedDocId($event)"
+      [tokenLenses]="tokenLenses"
+    ></app-panel-wrapper
+  ></mat-tab>
+  <mat-tab label="Filtri"
+    ><app-filter-wrapper
+      (updateTokenLensesEvent)="updateTokenLenses($event)"
+      [selectedDocId]="selectedDocId"
+      [selectedTabIndex]="selectedTabIndex"
+    ></app-filter-wrapper
+  ></mat-tab>
 </mat-tab-group>
