--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,3 +69,29 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #7cceff #ffffff;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #7cceff;
+  border-radius: 10px;
+  border: 3px solid #ffffff;
+}
+
+.leader-line {
+  z-index: 999 !important;
+}
