--- a/src/app/filter-main-panel/filter-main-panel.component.scss
+++ b/src/app/filter-main-panel/filter-main-panel.component.scss
@@ -1,28 +1,81 @@
-.box {
-  width: 200px;
-  height: 200px;
-  border: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
-  cursor: move;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background: #fff;
-  border-radius: 4px;
-  position: relative;
-  z-index: 1;
-  transition: box-shadow 200ms cubic-bezier(0, 0, 0.2, 1);
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 1px 5px 0 rgba(0, 0, 0, 0.12);
+::ng-deep .mat-expansion-panel-content {
+  overflow-y: scroll !important;
+  height: 305px;
 }
 
-.box:active {
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-    0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+::ng-deep .mat-expansion-panel-header.mat-expanded {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  box-shadow: 0px 0px 5px 0px;
+  margin-bottom: 10px;
+}
+
+.filter-card > ::ng-deep .mat-expansion-panel-header {
+  padding-left: 0px !important;
+}
+
+::ng-deep .remove-button {
+  margin-top: 2px;
+  margin-right: 10px;
+}
+
+::ng-deep .toggle-button {
+  margin-top: 2px;
+}
+
+mat-slide-toggle {
+  flex-grow: 0;
+  padding: 10px;
+}
+
+.color-label {
+  display: block;
+}
+
+.highlight-label {
+  display: block;
+  margin-top: 20px;
 }
 
 .boundary {
   width: 100%;
   height: 100%;
+}
+
+.filter-card {
+  width: 305px;
+  position: absolute;
+}
+
+.checkbox-group label {
+  margin-right: 10px;
+}
+
+.checkbox-group {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: inline-grid;
+  grid-template-columns: 65px 65px 0px;
+}
+
+.checkbox-group mat-checkbox {
+  margin-right: 20px;
+}
+
+.apply-button {
+  display: block;
+  margin-left: auto;
+  margin-top: 15px;
+}
+
+.lens-card {
+  margin-top: 10px;
+}
+
+.lens-card ::ng-deep .mat-expansion-panel-content {
+  height: 225px;
+}
+
+mat-label {
+  display: block;
 }
