--- a/src/app/panel-wrapper/panel-wrapper.component.html
+++ b/src/app/panel-wrapper/panel-wrapper.component.html
@@ -1,12 +1,12 @@
 <div class="panel-wrapper">
   <app-side-panel
-    [documentList]="documentList"
     (documentListSelectionChangeEvent)="changeSelectedDocument($event)"
     (removeDocumentFromListEvent)="removeDocumentFromList($event)"
     class="side-panel"
   ></app-side-panel>
   <app-main-panel
     [selectedDocument]="selectedDocument"
+    [tokenLenses]="tokenLenses"
     class="main-panel"
   ></app-main-panel>
 </div>
