translated interface in italian and some fixes

--- a/src/app/filter-main-panel/filter-main-panel.component.html
+++ b/src/app/filter-main-panel/filter-main-panel.component.html
@@ -7,7 +7,7 @@
     cdkDragBoundary=".boundary"
     (mousedown)="moveUp(card)"
     (cdkDragEnded)="panelH._toggle()"
-    (click)="linkWithFilterCard(panelH, card)"
+    (click)="linkSentenceCardWithFilterCard(panelH, card)"
     (cdkDragMoved)="updateLine(card)"
     [cdkDragFreeDragPosition]="getFreePosition(card)"
     [ngStyle]="{ 'z-index': card.zIndex }"
@@ -22,7 +22,7 @@
         mat-icon-button
         aria-label="Remove"
         class="remove-button"
-        (click)="removeFilterCard(card)"
+        (click)="removeFilterCard($event, card)"
       >
         <mat-icon color="warn">delete</mat-icon>
       </button>
@@ -33,7 +33,7 @@
           (change)="toggleFilterLens($event, card)"
           [disabled]="card.notApplied"
         ></mat-slide-toggle>
-        {{ card.filterRequest.upos }}
+        {{ getCardName(card) }}
       </mat-panel-title>
     </mat-expansion-panel-header>
     <form [formGroup]="card.filterFormGroup">
@@ -52,7 +52,7 @@
         "
         class="checkbox-group"
       >
-        <label>Gender: </label>
+        <label>Genere: </label>
         <mat-checkbox formControlName="fem">Fem</mat-checkbox>
         <mat-checkbox formControlName="masc">Masc</mat-checkbox>
       </div>
@@ -67,48 +67,63 @@
         "
         class="checkbox-group"
       >
-        <label>Number:</label>
+        <label>Numero:</label>
         <mat-checkbox formControlName="sing">Sing</mat-checkbox>
         <mat-checkbox formControlName="plur">Plur</mat-checkbox>
       </div>
 
-      <div *ngIf="card.filterRequest.upos == 'VERB'">
-        <mat-label>Tense: </mat-label>
+      <div *ngIf="card.filterRequest.upos == 'NOUN'">
+        <mat-label>Ner: </mat-label>
         <mat-form-field appearance="fill">
-          <mat-select formControlName="tense" value="All">
+          <mat-select formControlName="prontype">
+            <mat-option value="B-LOC"> B-LOC </mat-option>
+            <mat-option value="O"> O </mat-option>
+            <mat-option value="S-LOC"> S-LOC </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+
+      <div *ngIf="card.filterRequest.upos == 'VERB'">
+        <mat-label>Tempo: </mat-label>
+        <mat-form-field appearance="fill">
+          <mat-label>Tempo</mat-label>
+          <mat-select formControlName="tense">
             <mat-option value="Fut"> Fut </mat-option>
             <mat-option value="Imp"> Imp </mat-option>
             <mat-option value="Past"> Past </mat-option>
-            <mat-option value="All"> ALL </mat-option>
+            <mat-option value="All"> Tutti </mat-option>
           </mat-select>
         </mat-form-field>
 
-        <mat-label>Form: </mat-label>
+        <mat-label>Forma: </mat-label>
         <mat-form-field appearance="fill">
-          <mat-select formControlName="verbform" value="All">
+          <mat-label>Forma</mat-label>
+          <mat-select formControlName="verbform">
             <mat-option value="Fin"> Fin </mat-option>
             <mat-option value="Ger"> Ger </mat-option>
             <mat-option value="Inf"> Inf </mat-option>
-            <mat-option value="All"> ALL </mat-option>
+            <mat-option value="All"> Tutti </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
 
       <div *ngIf="card.filterRequest.upos == 'ADJ'">
-        <mat-label>Numtype: </mat-label>
+        <mat-label>Numerale: </mat-label>
         <mat-form-field appearance="fill">
-          <mat-select formControlName="numtype" value="All">
+          <mat-label>Numerale</mat-label>
+          <mat-select formControlName="numtype">
             <mat-option value="ord"> Ord </mat-option>
             <mat-option value="card"> Card </mat-option>
-            <mat-option value="All"> ALL </mat-option>
+            <mat-option value="All"> Tutti </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
 
       <div *ngIf="card.filterRequest.upos == 'PRON'">
-        <mat-label>Prontype: </mat-label>
+        <mat-label>Tipo di pronome: </mat-label>
         <mat-form-field appearance="fill">
-          <mat-select formControlName="prontype" value="All">
+          <mat-label>Tipo di pronome</mat-label>
+          <mat-select formControlName="prontype">
             <mat-option value="Art"> Art </mat-option>
             <mat-option value="Dem"> Dem </mat-option>
             <mat-option value="Exc"> Exc </mat-option>
@@ -118,17 +133,19 @@
             <mat-option value="Prs"> Prs </mat-option>
             <mat-option value="Rel"> Rel </mat-option>
             <mat-option value="Tot"> Tot </mat-option>
+            <mat-option value="All"> Tutti </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
 
       <div *ngIf="card.filterRequest.upos == 'ADJ'">
-        <mat-label>Polarity: </mat-label>
+        <mat-label>Polarità: </mat-label>
         <mat-form-field appearance="fill">
-          <mat-select formControlName="polarity" value="All">
-            <mat-option value="Neg"> Negative </mat-option>
-            <mat-option value="Pos"> Positive </mat-option>
-            <mat-option value="All"> ALL </mat-option>
+          <mat-label>Polarità</mat-label>
+          <mat-select formControlName="polarity">
+            <mat-option value="Neg"> Negativo </mat-option>
+            <mat-option value="Pos"> Positivo </mat-option>
+            <mat-option value="All"> Tutti </mat-option>
           </mat-select>
         </mat-form-field>
       </div>
@@ -139,14 +156,14 @@
         "
         class="checkbox-group"
       >
-        <label>Foreign:</label>
-        <mat-checkbox formControlName="foreign">Yes</mat-checkbox>
+        <label>Straniero:</label>
+        <mat-checkbox formControlName="foreign">Si</mat-checkbox>
       </div>
 
       <div *ngIf="card.filterRequest.upos == 'DET'" class="checkbox-group">
-        <label>Definite:</label>
-        <mat-checkbox formControlName="def">Def</mat-checkbox>
-        <mat-checkbox formControlName="ind">Ind</mat-checkbox>
+        <label>Tipo:</label>
+        <mat-checkbox formControlName="def">Det</mat-checkbox>
+        <mat-checkbox formControlName="ind">Indet</mat-checkbox>
       </div>
 
       <button
@@ -164,7 +181,7 @@
         [collapsedHeight]="'40px'"
         [expandedHeight]="'40px'"
       >
-        <mat-panel-title> Lens </mat-panel-title>
+        <mat-panel-title> Lente </mat-panel-title>
       </mat-expansion-panel-header>
 
       <form [formGroup]="card.lensFormGroup">
@@ -177,10 +194,10 @@
           </mat-select>
         </mat-form-field>
 
-        <mat-label class="color-label">Color</mat-label>
+        <mat-label class="color-label">Colore</mat-label>
         <input type="color" formControlName="color" value="#000000" />
 
-        <mat-label class="highlight-label">Highlight</mat-label>
+        <mat-label class="highlight-label"> Evidenziatore </mat-label>
         <input type="color" formControlName="highlight" value="#FFFFFF" />
       </form>
     </mat-expansion-panel>
@@ -208,7 +225,7 @@
         mat-icon-button
         aria-label="Remove"
         class="remove-button"
-        (click)="removeSentenceCard(card)"
+        (click)="removeSentenceCard($event, card)"
       >
         <mat-icon color="warn">delete</mat-icon>
       </button>
@@ -216,7 +233,7 @@
         mat-icon-button
         aria-label="Link"
         class="remove-button"
-        (click)="linkFilterCard($event, card)"
+        (click)="linkSentenceCard($event, card)"
         *ngIf="card.embeddingFor == undefined"
       >
         <mat-icon color="warn">settings_ethernet</mat-icon>
@@ -225,7 +242,7 @@
         mat-icon-button
         aria-label="Link"
         class="remove-button"
-        (click)="unlinkFilterCard($event, card, sentenceSlideToggle)"
+        (click)="unlinkSentenceCard($event, card, sentenceSlideToggle)"
         *ngIf="card.embeddingFor != undefined"
       >
         <mat-icon color="warn"> backspace </mat-icon>
@@ -239,11 +256,11 @@
           [disabled]="card.embeddingFor == undefined || card.notApplied"
           [checked]="card.active"
         ></mat-slide-toggle>
-        SENTENCE
+        {{ getCardName(card) }}
       </mat-panel-title>
     </mat-expansion-panel-header>
     <form [formGroup]="card.sentenceFormGroup">
-      <mat-label>Type: </mat-label>
+      <mat-label>Tipo: </mat-label>
       <mat-form-field appearance="fill">
         <mat-select formControlName="type">
           <mat-option value="int"> Int </mat-option>
@@ -265,7 +282,7 @@
         [collapsedHeight]="'40px'"
         [expandedHeight]="'40px'"
       >
-        <mat-panel-title> Lens </mat-panel-title>
+        <mat-panel-title> Lente </mat-panel-title>
       </mat-expansion-panel-header>
 
       <form [formGroup]="card.lensFormGroup">
@@ -278,10 +295,10 @@
           </mat-select>
         </mat-form-field>
 
-        <mat-label class="color-label">Color</mat-label>
+        <mat-label class="color-label">Colore</mat-label>
         <input type="color" formControlName="color" value="#000000" />
 
-        <mat-label class="highlight-label">Highlight</mat-label>
+        <mat-label class="highlight-label">Evidenziatore</mat-label>
         <input type="color" formControlName="highlight" value="#FFFFFF" />
       </form>
     </mat-expansion-panel>
@@ -310,7 +327,7 @@
         mat-icon-button
         aria-label="Remove"
         class="remove-button"
-        (click)="removeSequenceCard(card)"
+        (click)="removeSequenceCard($event, card)"
       >
         <mat-icon color="warn">delete</mat-icon>
       </button>
@@ -318,7 +335,7 @@
         mat-icon-button
         aria-label="Link"
         class="remove-button"
-        (click)="linkSequenceFilterCard($event, card)"
+        (click)="linkSequenceCard($event, card)"
         *ngIf="card.sequenceFor.length < 2"
       >
         <mat-icon color="warn">settings_ethernet</mat-icon>
@@ -327,16 +344,18 @@
         mat-icon-button
         aria-label="Link"
         class="remove-button"
-        (click)="unlinkSequenceFilterCard($event, card)"
+        (click)="unlinkSequenceCard($event, card)"
         *ngIf="card.sequenceFor.length == 2"
       >
         <mat-icon color="warn"> backspace </mat-icon>
       </button>
-      <mat-panel-title style="padding-left: 15px"> SEQUENCE </mat-panel-title>
+      <mat-panel-title style="padding-left: 15px">
+        {{ getCardName(card) }}
+      </mat-panel-title>
     </mat-expansion-panel-header>
     <form [formGroup]="card.sequenceFormGroup">
       <mat-form-field appearance="fill">
-        <mat-label>distance</mat-label>
+        <mat-label>distanza</mat-label>
         <input matInput formControlName="distance" />
       </mat-form-field>
 
