--- a/src/app/filter-side-panel/filter-side-panel.component.html
+++ b/src/app/filter-side-panel/filter-side-panel.component.html
@@ -6,7 +6,7 @@
       color="warn"
       (click)="addFilterCard('ADJ')"
     >
-      ADJ
+      AGGETTIVO
     </button>
   </mat-list-item>
   <mat-list-item>
@@ -16,7 +16,7 @@
       color="warn"
       (click)="addFilterCard('VERB')"
     >
-      VERB
+      VERBO
     </button>
   </mat-list-item>
   <mat-list-item>
@@ -26,7 +26,7 @@
       color="warn"
       (click)="addFilterCard('NOUN')"
     >
-      NOUN
+      NOME
     </button>
   </mat-list-item>
   <mat-list-item>
@@ -36,7 +36,7 @@
       color="warn"
       (click)="addFilterCard('PRON')"
     >
-      PRONOUN
+      PRONOME
     </button>
   </mat-list-item>
 
@@ -47,7 +47,7 @@
       color="warn"
       (click)="addFilterCard('DET')"
     >
-      ARTICLE
+      ARTICOLO
     </button>
   </mat-list-item>
 
@@ -58,7 +58,7 @@
       color="warn"
       (click)="addFilterCard('SENTENCE')"
     >
-      SENTENCE
+      FRASE
     </button>
   </mat-list-item>
   <mat-list-item>
@@ -68,7 +68,7 @@
       color="warn"
       (click)="addFilterCard('SEQUENCE')"
     >
-      SEQUENCE
+      SEQUENZA
     </button>
   </mat-list-item>
 </mat-list>
