--- a/src/app/filter-wrapper/filter-wrapper.component.html
+++ b/src/app/filter-wrapper/filter-wrapper.component.html
@@ -11,6 +11,7 @@
     (applySequenceEvent)="applySequence($event)"
     (removeFilterCardEvent)="removeFilterCard($event)"
     (removeSentenceCardEvent)="removeSentenceCard($event)"
+    (removeSequenceCardEvent)="removeSequenceCard($event)"
     class="filter-main-panel"
     [filterCards]="filterCards"
     [sentenceCards]="sentenceCards"
