--- a/src/app/remove-cards-dialog/remove-cards-dialog.component.html
+++ b/src/app/remove-cards-dialog/remove-cards-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Rimuovi card</h2>
 <mat-dialog-content class="mat-typography">
-  <span><p mat-dialog-title>Sei sicuro di voler eliminare?</p></span>
+  <h3>Sei sicuro di voler eliminare la card?</h3>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
