--- a/src/app/wrapper/wrapper.component.html
+++ b/src/app/wrapper/wrapper.component.html
@@ -14,6 +14,7 @@
       (updateTokenLensesEvent)="updateTokenLenses($event)"
       [selectedDocId]="selectedDocId"
       [selectedTabIndex]="selectedTabIndex"
+      [resetCards]="resetCards"
     ></app-filter-wrapper
   ></mat-tab>
 </mat-tab-group>
